data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1688.wast
;; 9. **Test Description:** Test `br_if` with conditional values pushed in rapid succession to stress test the execution environment's ability to handle and evaluate these conditions accurately.    - **Specific Constraint:** Stress test condition evaluations with rapid operand stack changes.    - **Relation to Incorrect Condition Evaluation:** Validates stability and isolation of conditional evaluations under stress.

(assert_invalid
  (module
    (func $stress_conditional_eval
      (block 
        (br_if 0 (i32.const 1))
        (br_if 0 (i32.const 0))
        (br_if 0 (i32.const 1))
        (br_if 0 (i32.const 0))
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)